Fix CSS formatting for flexbox alignment

--- a/style.css
+++ b/style.css
@@ -410,3 +410,6 @@ footer {
         justify-content: center;
     }
 }
+        justify-content: center;
+    }
+}
